Rewording of Comments

--- a/Figure 2 (Map)/Figure2.html
+++ b/Figure 2 (Map)/Figure2.html
@@ -367,7 +367,7 @@ display: none;
     #popup = ~paste(name, &quot;&lt;br&gt;gdp:&quot;, gdp)
   #) |&gt;
   #setView(lng = 0, lat = 20, zoom = 2)</code></pre>
-<pre class="r"><code># Install packages if needed
+<pre class="r"><code># Install packages
 #install.packages(c(&quot;ggplot2&quot;, &quot;dplyr&quot;, &quot;rnaturalearth&quot;, &quot;rnaturalearthdata&quot;))
 
 # Load libraries
